k8s-config-initial/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fastapi-app
  labels:
    app: fastapi-app
spec:
  containers:
    - name: fastapi-app
      image: mbaoma/fast-api
      ports:
        - containerPort: 8000
