k8s-config-initial/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost  # Replace with your domain name or leave it out to default to wildcard.
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8000
